<resources>
    <string name="app_name">Молоко</string>
    <string name="menu_home">Головна</string>
    <string name="menu_milk">Молоко</string>
    <string name="menu_contacts">Контакти</string>
    <string name="menu_map">Молоко</string>
    <string name="year">Рік</string>
    <string name="production">Виробництво</string>
    <string name="cost">Вартість</string>
    <string name="add_row">Створити запис</string>
    <string name="edit_row">Редагувати запис</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>